--- a/kisiler/ahmet-arslan.html
+++ b/kisiler/ahmet-arslan.html
@@ -10,7 +10,20 @@
     <div class="card profile">
       <img src="../assets/img/ahmet-arslan.jpg" alt="Ahmet Arslan"/>
       <div>
-        <p>Ahmet Arslan, 2 Haziran 1962’de Kars’ta doğmuştur. Ulaştırma, Denizcilik ve Haberleşme Bakanı olarak görev almıştır. Kars’ın kalkınmasına önemli katkılarda bulunmuştur.</p>
+        <p>HMET ARSLAN CADDESİ:
+TÜRKÇE:
+Ahmet Arslan, 2 Haziran 1962 tarihinde Kars’ın Kağızman ilçesinde doğmuş Türk mühendis, bürokrat ve siyasetçidir. İstanbul Teknik Üniversitesi Gemi İnşaatı ve Deniz Bilimleri Fakültesi’nden mezun olduktan sonra Milli Güvenlik Akademisi’nin 56. dönemini tamamlamıştır. Meslek yaşamına özel sektörde başlayan Arslan, Pendik Tersanesi gibi kuruluşlarda görev almış, ardından kamu bürokrasisinde çeşitli kademelerde çalışmıştır. Denizcilik Müsteşarlığı’nda Daire Başkanlığı ve Genel Müdür Yardımcılığı görevlerinde bulunmuş; ayrıca Devlet Hava Meydanları İşletmesi, TTNET, Türk Loydu Vakfı ve TÜRKSAT gibi kurumlarda yönetim ve denetim kurulu üyelikleri yapmıştır.
+
+Siyasi kariyerine Adalet ve Kalkınma Partisi’nden (AK Parti) giren Ahmet Arslan, Kars milletvekili olarak Türkiye Büyük Millet Meclisi’nde görev almıştır. 24 Mayıs 2016 – 10 Temmuz 2018 tarihleri arasında Türkiye Cumhuriyeti 65. Hükümeti’nde Ulaştırma, Denizcilik ve Haberleşme Bakanı olarak görev yapmıştır. Görev süresi boyunca ulaştırma altyapısı, denizcilik politikaları ve haberleşme teknolojileri alanlarında çeşitli projelerin yürütülmesine katkı sağlamıştır.
+
+Kars kökenli bir siyasetçi olarak hem memleketinde hem de ülke genelinde önemli hizmetlerde bulunan Ahmet Arslan, mühendislik ve kamu yönetimi birikimini birleştirerek Türkiye’nin ulaştırma politikalarına yön veren isimlerden biri olmuştur. Aldığı çeşitli ödüller — Türk Dünyası Mühendislik Ödülü, Fahri Profesörlük ve 2010 Yılı “Negatifi Pozitife Çevirenler – Yılın Bürokratı” gibi unvanlar — onun mesleki başarılarını taçlandırmıştır. Teknik bilgiye dayalı yaklaşımı, disiplinli kamu hizmeti anlayışı ve Kars’a olan bağlılığı, onu hem bölgesel hem de ulusal ölçekte öne çıkaran bir kişilik haline getirmiştir. 
+ENGLISH:
+Ahmet Arslan was born on June 2, 1962, in the Kağızman district of Kars. He is a Turkish engineer, bureaucrat, and politician. After graduating from Istanbul Technical University's Faculty of Naval Architecture and Ocean Engineering, he completed the 56th term of the National Security Academy. Arslan began his career in the private sector, working at organizations such as Pendik Shipyard and later holding various positions in the public bureaucracy. He served as a Department Head and Deputy General Manager at the Undersecretariat of Maritime Affairs, and as a member of the board of directors and auditors at institutions such as the State Airports Authority, TTNET, the Türk Loydu Foundation, and TÜRKSAT.
+
+Ahmet Arslan began his political career as a member of the Justice and Development Party (AK Party) and served in the Grand National Assembly of Turkey as a Member of Parliament for Kars. He served as Minister of Transport, Maritime Affairs, and Communications in the 65th Government of the Republic of Turkey from May 24, 2016, to July 10, 2018. During his tenure, he contributed to the implementation of various projects in the areas of transportation infrastructure, maritime policies, and communication technologies.
+
+Ahmet Arslan, a politician originally from Kars, has made significant contributions both in his hometown and nationally. Combining his engineering and public administration expertise, he has become one of the figures shaping Turkey's transportation policies. His numerous awards—including the Turkic World Engineering Award, an Honorary Professorship, and the 2010 "Turning Negatives into Positives – Bureaucrat of the Year"—have crowned his professional achievements. His technically knowledge-based approach, disciplined public service approach, and commitment to Kars have made him a prominent figure both regionally and nationally.
+</p>
         <div class="qr">
           <img src="../assets/qr/ahmet-arslan.png" alt="QR - Ahmet Arslan"/>
           <div>
