--- a/kisiler/ahmet-arslan.html
+++ b/kisiler/ahmet-arslan.html
@@ -17,7 +17,7 @@
 
     <main class="content">
         <div class="profile-card">
-            <img src="../assets/ahmet-arslan.png" alt="Ahmet Arslan" class="profile-image">
+            <img src="../assets/ahmet-arslan.jpg" alt="Ahmet Arslan" class="profile-image">
 
             <div class="profile-info">
                 <h2>Türkçe Biyografi</h2>
