--- a/kisiler/ahmet-arslan.html
+++ b/kisiler/ahmet-arslan.html
@@ -17,7 +17,7 @@
 
     <main class="content">
         <div class="profile-card">
-            <img src="../assets/ahmet-arslan.jpg" alt="Ahmet Arslan" class="profile-image">
+            <img src="../assets/img/ahmet-arslan.jpg" alt="Ahmet Arslan" class="profile-image">
 
             <div class="profile-info">
                 <h2>Türkçe Biyografi</h2>
@@ -70,7 +70,7 @@
             </div>
 
             <div class="qr-section">
-                <img src="../assets/qr_ahmet_arslan.png" alt="QR Code" class="qr-image">
+                <img src="../assets/qr/ahmet-arslan.png" alt="QR Code">
                 <p class="qr-info">QR ile hızlı erişim: Bu kod ziyaretçileri doğrudan bu sayfaya yönlendirir.</p>
                 <a href="../index.html" class="back-button">← Haritaya dön</a>
             </div>
