--- a/kisiler/ahmet-arslan.html
+++ b/kisiler/ahmet-arslan.html
@@ -1,84 +1,26 @@
-<!DOCTYPE html>
-<html lang="tr">
+<!doctype html><html lang="tr">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ahmet Arslan</title>
-    <link rel="stylesheet" href="../style.css">
-
-    <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
+<meta charset="utf-8"/><meta name="viewport" content="width=device-width, initial-scale=1"/>
+<title>Ahmet Arslan</title>
+<link rel="stylesheet" href="../style.css"/>
 </head>
-
 <body>
-    <header class="header">
-        <h1>Ahmet Arslan</h1>
-    </header>
-
-    <main class="content">
-        <div class="profile-card">
-            <img src="../assets/img/ahmet-arslan.jpg" alt="Ahmet Arslan" class="profile-image">
-
-            <div class="profile-info">
-                <h2>Türkçe Biyografi</h2>
-                <p>
-                    Ahmet Arslan, 2 Haziran 1962 tarihinde Kars’ın Kağızman ilçesinde doğmuş Türk mühendis, bürokrat ve siyasetçidir. 
-                    İstanbul Teknik Üniversitesi Gemi İnşaatı ve Deniz Bilimleri Fakültesi’nden mezun olduktan sonra Milli Güvenlik 
-                    Akademisi’nin 56. dönemini tamamlamıştır.
-                </p>
-                <p>
-                    Meslek yaşamına özel sektörde başlayan Arslan, Pendik Tersanesi gibi kuruluşlarda görev almış, ardından kamu 
-                    bürokrasisinde çeşitli kademelerde çalışmıştır. Denizcilik Müsteşarlığı’nda Daire Başkanlığı ve Genel Müdür 
-                    Yardımcılığı görevlerinde bulunmuş; ayrıca Devlet Hava Meydanları İşletmesi, TTNET, Türk Loydu Vakfı ve TÜRKSAT 
-                    gibi kurumlarda yönetim ve denetim kurulu üyelikleri yapmıştır.
-                </p>
-                <p>
-                    Siyasi kariyerine Adalet ve Kalkınma Partisi’nden (AK Parti) giren Ahmet Arslan, Kars milletvekili olarak Türkiye 
-                    Büyük Millet Meclisi’nde görev almıştır. 24 Mayıs 2016 – 10 Temmuz 2018 tarihleri arasında Türkiye Cumhuriyeti 
-                    65. Hükümeti’nde Ulaştırma, Denizcilik ve Haberleşme Bakanı olarak görev yapmıştır.
-                </p>
-                <p>
-                    Aldığı çeşitli ödüller — Türk Dünyası Mühendislik Ödülü, Fahri Profesörlük ve 2010 Yılı “Negatifi Pozitife Çevirenler 
-                    – Yılın Bürokratı” gibi unvanlar — onun mesleki başarılarını taçlandırmıştır. Teknik bilgiye dayalı yaklaşımı, 
-                    disiplinli kamu hizmeti anlayışı ve Kars’a olan bağlılığı, onu hem bölgesel hem de ulusal ölçekte öne çıkaran 
-                    bir kişilik haline getirmiştir.
-                </p>
-
-                <h2>English Biography</h2>
-                <p>
-                    Ahmet Arslan was born on June 2, 1962, in the Kağızman district of Kars. He is a Turkish engineer, bureaucrat, 
-                    and politician. After graduating from Istanbul Technical University's Faculty of Naval Architecture and Ocean 
-                    Engineering, he completed the 56th term of the National Security Academy.
-                </p>
-                <p>
-                    Arslan began his career in the private sector, working at organizations such as Pendik Shipyard, and later held 
-                    various positions in the public bureaucracy. He served as Department Head and Deputy General Manager at the 
-                    Undersecretariat of Maritime Affairs, and served on the boards of institutions such as the State Airports Authority, 
-                    TTNET, the Türk Loydu Foundation, and TÜRKSAT.
-                </p>
-                <p>
-                    He began his political career with the Justice and Development Party (AK Party) and served as a Member of Parliament 
-                    for Kars in the Grand National Assembly of Turkey. He served as the Minister of Transport, Maritime Affairs, and 
-                    Communications from May 24, 2016, to July 10, 2018.
-                </p>
-                <p>
-                    His numerous awards — including the Turkic World Engineering Award, an Honorary Professorship, and the 2010 
-                    “Turning Negatives into Positives – Bureaucrat of the Year” — highlight his distinguished professional achievements.
-                    His engineering background, disciplined public service approach, and devotion to Kars have made him a prominent 
-                    figure nationally and regionally.
-                </p>
-            </div>
-
-            <div class="qr-section">
-                <img src="../assets/qr/ahmet-arslan.png" alt="QR Code">
-                <p class="qr-info">QR ile hızlı erişim: Bu kod ziyaretçileri doğrudan bu sayfaya yönlendirir.</p>
-                <a href="../index.html" class="back-button">← Haritaya dön</a>
-            </div>
+  <div class="container">
+    <div class="header"><h1>Ahmet Arslan</h1></div>
+    <div class="card profile">
+      <img src="../assets/img/ahmet-arslan.jpg" alt="Ahmet Arslan"/>
+      <div>
+        <p>Ahmet Arslan, 2 Haziran 1962’de Kars’ta doğmuştur. Ulaştırma, Denizcilik ve Haberleşme Bakanı olarak görev almıştır. Kars’ın kalkınmasına önemli katkılarda bulunmuştur.</p>
+        <div class="qr">
+          <img src="../assets/qr/ahmet-arslan.png" alt="QR - Ahmet Arslan"/>
+          <div>
+            <h3>QR ile hızlı erişim</h3>
+            <p>Bu QR kodu tarayan ziyaretçiler bu sayfaya doğrudan ulaşır.</p>
+            <a class="btn" href="../index.html">← Haritaya dön</a>
+          </div>
         </div>
-    </main>
-
-    <footer class="footer">
-        <p>Kars Kültürel Sokak Projesi • Ahmet Arslan</p>
-    </footer>
-</body>
-</html>
+      </div>
+    </div>
+    <div class="footer">Kars Kültürel Sokak Projesi • Ahmet Arslan</div>
+  </div>
+</body></html>
