Rename section ID from ahmet-arslan to vasfiye-eris

--- a/kisiler/vasfiye-eris.html
+++ b/kisiler/vasfiye-eris.html
@@ -10,7 +10,7 @@
     <div class="card profile">
       <img src="../assets/img/ahmet-arslan.jpg" alt="Vasfiye Eriş"/>
       <div>
-        <section id="ahmet-arslan-caddesi" class="street-section">
+        <section id="vasfiye-eris-caddesi" class="street-section">
     <h2>Vasfiye ERİŞ CADDESİ</h2>
         <br>
     <h3>Türkçe</h3>
