--- a/kisiler/vasfiye-eris.html
+++ b/kisiler/vasfiye-eris.html
@@ -1,7 +1,7 @@
 <!doctype html><html lang="tr">
 <head>
 <meta charset="utf-8"/><meta name="viewport" content="width=device-width, initial-scale=1"/>
-<title>AVasfiye Eriş</title>
+<title>Vasfiye Eriş</title>
 <link rel="stylesheet" href="../style.css"/>
 </head>
 <body>
