--- a/index.html
+++ b/index.html
@@ -24,7 +24,12 @@
         <h3>Vasfiye Eriş</h3>
         <p><a class="btn" href="kisiler/vasfiye-eris.html">Profili Gör</a></p>
       </div>
-
+      
+      <div class="card">
+        <h3>Haydar Aliyev</h3>
+        <p><a class="btn" href="kisiler/haydar-aliyev.html">Profili Gör</a></p>
+      </div>
+      
       <div class="card">
         <h3>Ahmet Arslan</h3>
         <p><a class="btn" href="kisiler/ahmet-arslan.html">Profili Gör</a></p>
