Add markers with popups to the map

--- a/index.html
+++ b/index.html
@@ -117,6 +117,11 @@
 
     L.marker([40.59959, 43.09199]).addTo(map)
       .bindPopup(`<strong>Vasfiye Eriş Sokak</strong><br/><a href='kisiler/vasfiye-eris.html'>Profili aç</a>`);
+
+     L.marker([40.60398, 43.09447]).addTo(map)
+      .bindPopup(`<strong>Haydar Aliyev Caddesi</strong><br/><a href='kisiler/haydar-aliyev.html'>Profili aç</a>`);
+  </script>
+
   </script>
 
 </body>
