--- a/kisiler/haydar-aliyev.html
+++ b/kisiler/haydar-aliyev.html
@@ -8,7 +8,7 @@
   <div class="container">
     <div class="header"><h1>Haydar Aliyev</h1></div>
     <div class="card profile">
-      <img src="../assets/img/ahmet-arslan.jpg" alt="Vasfiye Eriş"/>
+      <img src="../assets/img/haydar-aliyev.jpg" alt="Haydar ALiyev"/>
       <div>
         <section id="vasfiye-eris-caddesi" class="street-section">
     <h2>Haydar Aliyev</h2>
