--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
       { name: "İsmet İnönü", type: "Caddesi", href: "kisiler/ismet-inonu.html", lat: 40.600906, lng: 43.096433 },
       { name: "Kazım Paşa", type: "Caddesi", href: "kisiler/kazim-pasa.html", lat: 40.60928, lng: 43.09428 },
       { name: "İbrahim Ethem Aykut", type: "Caddesi", href: "kisiler/ibrahim-ethem-aykut.html", lat: 40.59890, lng: 43.08741 },
-      { name: "Hafız Kurban", type: "Sokağı", href: "kisiler/hafiz-kurban-sokak.html", lat: 40.60000, lng: 43.09500 }
+      { name: "Hafız Kurban", type: "Sokağı", href: "kisiler/hafiz-kurban-sokak.html", lat: 40.60000, lng: 43.09500 },
+      { name: "Hafız Paşa", type: "Caddesi", href: "kisiler/hafiz-pasa.html", lat: 40.60368, lng: 43.10925 }
       
     ];
 
