--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       { name: "İbrahim Ethem Aykut", type: "Caddesi", href: "kisiler/ibrahim-ethem-aykut.html", lat: 40.59890, lng: 43.08741 },
       { name: "Hafız Kurban", type: "Sokağı", href: "kisiler/hafiz-kurban-sokak.html", lat: 40.60000, lng: 43.09500 },
       { name: "Hafız Paşa", type: "Caddesi", href: "kisiler/hafiz-pasa.html", lat: 40.60368, lng: 43.10925 },
-      { name: "Hakim Ali Rıza Aslan", type: "Caddesi", href: "kisiler/hafiz-pasa.html", lat: 40.60005, lng: 43.09633 }
+      { name:"Hakim Ali Rıza Aslan", type:"Caddesi", href:"kisiler/hakim-ali-riza-aslan.html", lat:40.60005, lng:43.09633 }
       
     ];
 
