--- a/kisiler/ataturk.html
+++ b/kisiler/ataturk.html
@@ -142,7 +142,7 @@
 
         <!-- QR -->
         <div class="qr">
-          <img src="../assets/qr/ataturk.png" alt="QR - Atatürk"/>
+          <img src="../assets/qr/ataturk-qr.png" alt="QR - Atatürk"/>
           <div>
             <h3>QR ile hızlı erişim</h3>
             <p>Bu QR kodu tarayan ziyaretçiler bu sayfaya doğrudan ulaşır.</p>
