--- a/kisiler/halit-pasa.html
+++ b/kisiler/halit-pasa.html
@@ -116,7 +116,7 @@
 
         <!-- QR -->
         <div class="qr">
-          <img src="../assets/qr/halit-pasa.png" alt="QR - Halit Paşa"/>
+          <img src="../assets/qr/halit-pasa-qr.png" alt="QR - Halit Paşa"/>
           <div>
             <h3>QR ile hızlı erişim</h3>
             <p>Bu QR kodu tarayan ziyaretçiler bu sayfaya doğrudan ulaşır.</p>
