--- a/kisiler/kazim-pasa.html
+++ b/kisiler/kazim-pasa.html
@@ -113,7 +113,7 @@
 
         <!-- QR -->
         <div class="qr">
-          <img src="../assets/qr/kazim-pasa.png" alt="QR - Kazım Paşa"/>
+          <img src="../assets/qr/kazim-pasa-qr.png" alt="QR - Kazım Paşa"/>
           <div>
             <h3>QR ile hızlı erişim</h3>
             <p>Bu QR kodu tarayan ziyaretçiler bu sayfaya doğrudan ulaşır.</p>
