--- a/kisiler/nese-doster.html
+++ b/kisiler/nese-doster.html
@@ -127,7 +127,7 @@
 
         <!-- QR -->
         <div class="qr">
-          <img src="../assets/qr/nese-doster.png" alt="QR - Neşe Doster"/>
+          <img src="../assets/qr/nese-doster-qr.png" alt="QR - Neşe Doster"/>
           <div>
             <h3>QR ile hızlı erişim</h3>
             <p>Bu QR kodu tarayan ziyaretçiler bu sayfaya doğrudan ulaşır.</p>
