--- a/kisiler/resul-yildiz-caddesi.html
+++ b/kisiler/resul-yildiz-caddesi.html
@@ -99,7 +99,7 @@
 
         <!-- QR -->
         <div class="qr">
-          <img src="../assets/qr/resul-yildiz.png" alt="QR - Resul Yıldız"/>
+          <img src="../assets/qr/resul-yildiz-caddesi-qr.png" alt="QR - Resul Yıldız"/>
           <div>
             <h3>QR ile hızlı erişim</h3>
             <p>Bu QR kodu tarayan ziyaretçiler bu sayfaya doğrudan ulaşır.</p>
