--- a/kisiler/ali-riza-bey.html
+++ b/kisiler/ali-riza-bey.html
@@ -120,7 +120,7 @@
 
         <!-- QR -->
         <div class="qr">
-          <img src="../assets/qr/ali-bey.png" alt="QR - Ali Rıza Bey"/>
+          <img src="../assets/qr/ali-riza-bey.png" alt="QR - Ali Rıza Bey"/>
           <div>
             <h3>QR ile hızlı erişim</h3>
             <p>Bu QR kodu tarayan ziyaretçiler bu sayfaya doğrudan ulaşır.</p>
