--- a/kisiler/celal-aras.html
+++ b/kisiler/celal-aras.html
@@ -93,7 +93,7 @@
 
         <!-- QR -->
         <div class="qr">
-          <img src="../assets/qr/celal-aras.png" alt="QR - Celal Aras"/>
+          <img src="../assets/qr/celal-aras-qr.png" alt="QR - Celal Aras"/>
           <div>
             <h3>QR ile hızlı erişim</h3>
             <p>Bu QR kodu tarayan ziyaretçiler bu sayfaya doğrudan ulaşır.</p>
