--- a/kisiler/ismet-inonu.html
+++ b/kisiler/ismet-inonu.html
@@ -111,7 +111,7 @@
 
         <!-- QR -->
         <div class="qr">
-          <img src="../assets/qr/ismet-inonu.png" alt="QR - İsmet İnönü"/>
+          <img src="../assets/qr/ismet-inonu-qr.png" alt="QR - İsmet İnönü"/>
           <div>
             <h3>QR ile hızlı erişim</h3>
             <p>Bu QR kodu tarayan ziyaretçiler bu sayfaya doğrudan ulaşır.</p>
