--- a/kisiler/necati-bey-sokak.html
+++ b/kisiler/necati-bey-sokak.html
@@ -91,7 +91,7 @@
 
         <!-- QR -->
         <div class="qr">
-          <img src="../assets/qr/necati-bey.png" alt="QR - Necati Bey"/>
+          <img src="../assets/qr/necati-bey-sokak-qr.png" alt="QR - Necati Bey"/>
           <div>
             <h3>QR ile hızlı erişim</h3>
             <p>Bu QR kodu tarayan ziyaretçiler bu sayfaya doğrudan ulaşır.</p>
